style.css
/* ... */
.Cstyle {
    color: #0423098A;
    margin-left: 100px;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    line-height: 22px;
    font-weight: 300px;
}

.arrowstyle {
    margin-bottom: 100px;
}

.containerC {
    /* display: flex; */
    width: 50%;
    height: 400px;
    /* background-color: coral; */
    /* margin-bottom: 100px; */
}

.Dstyle {
    color: #07360F;
    margin-top: 100px;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    line-height: 20px;
    font-weight: 500px;

}

.Estyle {
    color: #175F23;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    line-height: 10px;
    font-weight: 600px;
}

.Fstyle {
    color: #0423098A;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 14px;
    line-height: 22px;
    font-weight: 300px;
}

.arrowstylee {
    margin-left: 400px;
    margin-top: 30px;
}

.containerD {
    display: flex;
    align-items: center;
    /* justify-content: center;  */
    width: 100%;
    height: 300px;
    /* background-color: #d6d60b;  */
    margin-bottom: 200px;
}


.contactcontainer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    width: 100%;
    padding:'20px';
    height: 400px;
}

.container-fluid1{
    position: absolute;
    width: 100%;
    height: 209px;
    left: 0px;
    top: 4964px;

    background: #5F9E69;
 }
.container-fluid1 .logocontainer{
    position: absolute;
    width: 217px;
    height: 69px;
    left: 104px;
    top: 43px;
    color: #DEF8E2;
    line-height: 69px;
}

.footer-buttons{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px;
    gap: 87px;

    position: absolute;
    width: 100%;
    height: 36px;
    left: 478px;
    top: 64px;

}
.footer-buttons a{
    font-family: 'Poppins';
    font-style: normal;
    font-size: 22px;
    line-height: 36px;
    color: #DEF8E2;
}
.container-fluid2{
    position: absolute;
    width: 100%;
    height: 50px;
    left: 0px;
    top: 5123px;
    text-align: center;
    background: #094513;
}
.container-fluid2 p{
    position: relative;
    top: 15px;
    font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: #C5CFC7;
}

.contactmaincontainer{
    background-color: darkmagenta;
}
.greenbox {
    width:90%;
    height:auto;
    background-color:#C4F6CC;
    border-radius: 20pt;
}

.container1 {
    width: 100%;
    height: 100px;
    /* background-color: hotpink; */
    text-align: center;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 35px;
    font-weight: 600px;
    line-height: 100px;
    color: #07360F;
    justify-content: center;
    align-items: top;
    display: flex;
    ;
}

.container2 {
    display: flex;
    padding-bottom: 50px;
    width: 100%;
    height: auto;
    justify-content: space-between;
    /* background-color: black; */
}

.numberstyle {
    line-height: 40px;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 600px;
    color: #5F9E69;
    ;
}

.subcontainer1 {
    width: 30%;
    height: auto;
    /* background-color: olivedrab; */
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 500px;
    color: #042309;
    text-align: center;
    line-height: 60px;
}

.hrs {
    width: 60%;
    text-align: center;
    margin-left: 20%;
    margin-right: 20%;
}

.emailstyle {
    line-height: 40px;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 600px;
    color: #5F9E69;
}

.subcontainer2 {

    width: 30%;
    height: auto;
    /* background-color: darkcyan; */
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 600px;
    color: #042309;
    text-align: center;
    line-height: 60px;

}

.hrs2 {
    width: 40%;
    text-align: center;
    margin-left: 30%;
    margin-right: 30%;
}

.subcontainer3 {
    width: 30%;
    height: auto;
    /* background-color: red; */
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 600px;
    color: #042309;
    text-align: center;
    line-height: 60px;

}

.hrs3 {
    width: 40%;
    text-align: center;
    margin-left: 30%;
    margin-right: 30%;
}

.socialstyle {
    line-height: 40px;
    font-family: 'Noto Serif Display', serif;
    font-family: 'Poppins', sans-serif;
    font-size: 18px;
    font-weight: 600px;
    color: #5F9E69;

}


.faq{
    display:flex ;
        
}
.FAQ{
    position: absolute;
    width: 30%;
    font-size: 100%;
    margin-top: 100px;
    margin-left: 100px;
    
    font-family:'Poppins';

}
.question{
  margin-left: 60%;
  margin-top:30px;
  font-family: 'poppins',sans-serif;
  margin-right: 8%;
  width: 70%;
}
.paragraph{
margin-bottom: 20px;
width: 95%;
font-size: 15px;
margin-left: 40px;
display: none;
margin-right: 10px;

}
.question-1{
   display:flex;
   font-size: 15px;
   margin-bottom:20px;
   margin-top: 20px;
   margin-left: 40px;
   margin-right: 10px;
   
}
.question hr{
    width: 100%;

}



.question-2{
    font-size: 15px;
    display: flex;
    margin-top: 20px;
    margin-left: 40px;
    
}



.btn-1{
    margin-left:100px;
    background-color: transparent;
    border: none;
    cursor: pointer;
    font-size: 40PX;
}
.btn-2{
     margin-left: 85px;
     background-color: transparent;
     border: none;
     cursor: pointer;
     font-size: 40px;

}

